# CodingChallengeBondingBox

./: .gitmodules  CMakeLists.txt  README.md
data/: video3.avi
data/example/: video.avi
data/output/: output_tracking_box.yml
ext/: CMakeLists.txt
src/: CMakeLists.txt
src/executable/: CMakeLists.txt  launcher.cpp  main.cpp
src/executables/: CMakeLists.txt  main.cpp
src/launcher/: launcher.cpp
src/lib/: CMakeLists.txt
src/lib/BoundingBoxHelper/: BoundingBoxHelper.cpp  CMakeLists.txt
src/lib/BoundingBoxHelper/include/: BoundingBoxHelper.h
src/lib/SegmentationHelper/: CMakeLists.txt  SegmentationHelper.cpp
src/lib/SegmentationHelper/include/: SegmentationHelper.h
src/lib/VideoHelper/: CMakeLists.txt  VideoHelper.cpp
src/lib/VideoHelper/include/: VideoHelper.h
